--- a/components/nav/PageHeader.module.css
+++ b/components/nav/PageHeader.module.css
@@ -35,8 +35,8 @@
 
 @media (max-width: 768px) {
   .header {
-    padding-left: 24px;
-    padding-right: 24px;
+    padding-left: 8px;
+    padding-right: 8px;
     margin-bottom: 24px;
   }
 }
